Remove Weblogic plugins from build #180, pineapple-weblogic-1212-schemas XMLBeans buils fails with Java9 #178, Add JAXB bindings file to report generator #176, Update Maven compiler plugin to Java 9 #175, Building Pineapple with Java 9 fails with maven-jaxb2-plugin failure #174,